fixed scroll x from body on mobile screen

--- a/src/component/Covid.css
+++ b/src/component/Covid.css
@@ -3,15 +3,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Paaji+2&display=swap');
 
 
-html {
-    overflow-x: hidden;
-}
-body {
+html, body {
     background-color: #15202B;
     font-family: 'Baloo Paaji 2', cursive;
-    width: 100%;
     height: 100%;
-
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 
@@ -29,7 +26,7 @@ body {
 ::-webkit-scrollbar-thumb {
     -webkit-border-radius: 10px;
     border-radius: 0;
-    background: #15202B
+    background: #273144
     ; 
 }
 
